penpot/base/penpot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penpot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: penpot-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["placeholder.invalid"]
      secretName: penpot-tls
  rules:
    - host: placeholder.invalid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
